--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Comfortaa', sans-serif;
 }
 
 a {
@@ -13,4 +12,42 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.font-title {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 700;
+}
+
+.font-subtitle {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 600;
+}
+
+.font-text {
+  font-family: 'Comfortaa', cursive;
+  font-weight: 400;
+}
+
+.blinking-cursor {
+  position: relative;
+}
+
+.blinking-cursor::after {
+  content: '';
+  display: inline-block;
+  width: 18px;
+  height: 3px;
+  background-color: #000;
+  animation: blinking-cursor-anim 1s step-end infinite;
+}
+
+@keyframes blinking-cursor-anim {
+  0%, 100% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
 }
