--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
+@import 'fonts';
 @import 'colors';
 @import 'components/blinking-cursor';
-@import 'fonts';
+@import 'components/vertical-separator';
 
 html,
 body {
