--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -3,6 +3,18 @@ $secondary-color: #E03616;
 // $accent-color: #008DD5;
 $accent-color: #008148;
 
+.bg-primary {
+  background-color: $primary-color;
+}
+
+.bg-secondary {
+  background-color: $secondary-color;
+}
+
+.bg-accent {
+  background-color: rgba($accent-color, $alpha: var(--tw-bg-opacity));
+}
+
 .text-secondary {
   color: $secondary-color;
 }
