--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,7 @@
 @import 'colors';
 @import 'components/blinking-cursor';
 @import 'components/vertical-separator';
+@import 'components/timeline';
 
 html {
   scroll-behavior: smooth;
