--- a/styles/components/timeline.scss
+++ b/styles/components/timeline.scss
@@ -1,5 +1,18 @@
 .timeline {
   position: relative;
+  grid-template-columns: 1fr 5rem 1fr;
+
+  &::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 2px;
+    background-color: red;
+    left: 50%;
+    transform: translateX(-50%);
+  } 
+
+  /* position: relative;
 
   &::before {
     content: '';
@@ -12,5 +25,5 @@
 
   &:nth-child(1) article {
     background-color: $secondary-color;
-  }
+  } */
 }
