--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,3 @@
-@import 'fonts';
 @import 'components/blinking-cursor';
 @import 'components/vertical-separator';
 
@@ -10,7 +9,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Comfortaa', sans-serif;
   color: #fff;
 }
 
@@ -32,4 +30,8 @@ a {
   &:hover {
     opacity: 1;
   }
+}
+
+.image-shadow > div {
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1) , 0px 4px 6px -2px rgba(0,0,0,0.05);
 }
